# blue

./: .clang-format  .clang-tidy  .codespellrc  .devcontainer.json  .dockerignore  .gitignore  .mergify.yml  .pre-commit-config.yaml  .ruff.toml  CODE_OF_CONDUCT.md  LICENSE  README.md  blue.repos  blue_sim.repos  cspell.json  docker-compose.yaml  docusaurus.config.js  env.sh  frames_2025-01-29_00.48.32.gv  frames_2025-02-05_19.01.53.gv  frames_2025-02-24_02.11.28.gv  frames_2025-02-24_02.13.43.gv  frames_2025-02-27_21.20.26.gv  frames_2025-02-28_22.53.39.gv  frames_2025-02-28_22.58.39.gv  frames_2025-02-28_22.59.49.gv  frames_2025-02-28_23.02.20.gv  frames_2025-02-28_23.23.37.gv  package-lock.json  package.json  requirements-build.txt  requirements-dev.txt  rob_1_controller_manager_param.yaml  setup.cfg  sim.repos  workspace.repos
blue_bridge/: CMakeLists.txt  package.xml
blue_bridge/config/: bridge.yaml
blue_bridge/include/blue_bridge/: bridge.hpp  pwm.hpp
blue_bridge/src/: bridge.cpp
blue_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
blue_bringup/config/: blue.yaml  bluerov2.yaml  bluerov2_heavy.yaml
blue_bringup/launch/: base.launch  base.launch.py  base.launch.yaml  blue.launch.py  bluerov2.launch.py  bluerov2_heavy.launch.py  sitl.launch  sitl.launch.py  tf.launch.yaml
blue_bringup/launch/ardusub/: ardusub.launch.yaml  base.launch.yaml  sitl.launch.yaml
blue_bringup/launch/bluerov2/: bluerov2.launch.py  bluerov2.launch.yaml  bluerov2_control.launch.py  tf.launch.py  thrusters.launch.yaml
blue_bringup/launch/bluerov2_heavy/: bluerov2_heavy.launch.py  bluerov2_heavy.launch.yaml  bluerov2_heavy_control.launch.py  bluerov2_heavy_obs.launch.yaml  control.launch.py  ns_bluerov2_heavy.launch.yaml  tf.launch  tf.launch.py  thrusters.launch.yaml
blue_bringup/launch/bluerov2_heavy_reach/: bluerov2_heavy_reach.launch.py  bluerov2_heavy_reach.launch.yaml  bluerov2_heavy_reach_control.launch.py  tf.launch.py  thrusters.launch.yaml
blue_bringup/scripts/: arm.sh  disarm.sh
blue_control/: CMakeLists.txt  package.xml
blue_control/include/blue_control/: base_controller.hpp  controller.hpp  dynamic_model.hpp  frames.hpp  ismc.hpp
blue_control/launch/: control.launch.py
blue_control/src/: base_controller.cpp  controller.cpp  dynamic_model.cpp  ismc.cpp  pwm.cpp
blue_control/test/: test_vector_to_eigen.cpp
blue_demos/: CMakeLists.txt  README.md  package.xml
blue_demos/control_examples/config/: bluerov2_controllers.yaml
blue_demos/control_examples/launch/: bluerov2_control.launch.py  bluerov2_heavy_control.launch.py  bluerov2_heavy_reach_control.launch.py
blue_demos/control_integration/config/: bluerov2_controllers.yaml  bluerov2_heavy_controllers.yaml  bluerov2_heavy_joint_traj_controller.yaml  bluerov2_heavy_transforms.yaml  bluerov2_transforms.yaml  ekf.yaml  transforms.yaml
blue_demos/control_integration/launch/: bluerov2_control.launch.py  bluerov2_controllers.launch.py  bluerov2_demo.launch.yaml  bluerov2_heavy_control.launch.py  bluerov2_heavy_controllers.launch.py  bluerov2_heavy_demo.launch.yaml  bluerov2_heavy_demo_obs.launch.yaml  bluerov2_heavy_with_jt_controllers.launch.py  bluerov2_heavy_with_obs.launch.py  test_gz_to_ros_bridge.launch.py
blue_demos/control_integration/xacro/: bluerov2.ros2_control.xacro
blue_demos/manipulator_systems/config/: initial_alpha_positions.yaml  initial_positions.yaml  uvms_controllers.yaml  uvms_transforms.yaml
blue_demos/manipulator_systems/launch/: bridges.launch.yaml  interactive_uvms_demo.launch.yaml  publish_trajectory.launch.yaml  send_trajectory.launch.yaml  send_trajectory_action.launch.yaml  trajectory_controller_demo.launch.yaml  uvms_base.launch.py  uvms_controllers.launch.py  uvms_demo.launch.yaml
blue_demos/teleoperation/config/: joy_teleop.yaml  transforms.yaml
blue_demos/teleoperation/launch/: joy_teleop.launch.yaml
blue_description/: CMakeLists.txt  README.md  package.xml
blue_description/config/: bluerov2.parm  bluerov2.yaml  bluerov2_heavy.parm  bluerov2_heavy.yaml  bluerov2_heavy_localization.yaml  bluerov2_heavy_manager.yaml  bluerov2_localization.yaml  joy_controller.yaml  joy_teleop.yaml  mavros.yaml
blue_description/config/ardusub/: ardusub_manager.yaml  mavros.yaml  ns_ardusub_manager.yaml  ns_mavros.yaml
blue_description/config/bluerov2/: ardusub.parm  controllers.yaml  localization.yaml  manager.yaml
blue_description/config/bluerov2_heavy/: ardusub.parm  controllers.yaml  localization.yaml  manager.yaml  new_manager.yaml  ns_localization.yaml
blue_description/gazebo/: README.md
blue_description/hooks/: hooks.dsv.in
blue_description/params/: bluerov2_heavy.parm
blue_description/rviz/: bluerov2.rviz  bluerov2_heavy.rviz  bluerov2_heavy_reach.rviz
blue_dynamics/: CMakeLists.txt  package.xml
blue_dynamics/src/: current_effects.cpp  hydrodynamics.cpp  thruster_dynamics.cpp  vehicle_dynamics.cpp
blue_dynamics/test/: test_hydrodynamics.cpp  test_thruster_dynamics.cpp  test_vehicle_dynamics.cpp
blue_localization/: package.xml  setup.cfg  setup.py
blue_localization/blue_localization/: localizer.py  source.py
blue_localization/launch/: localization.launch.py  markers.launch.py
blue_manager/: CMakeLists.txt  package.xml  setup.cfg  setup.py
blue_manager/blue_manager/: joy_controller.py  manager.py
blue_manager/launch/: manager.launch.py
blue_msgs/: CMakeLists.txt  package.xml
blue_msgs/action/: Arm.action  Connect.action
blue_msgs/msg/: Reference.msg  TwistAccelCmd.msg
blue_planner_cpp/: CMakeLists.txt  package.xml
blue_planner_cpp/launch/: multi_robot.launch.yaml
blue_planner_cpp/src/: collision_check.cpp  joint_traj_planner.cpp  ompl_planner.cpp
blue_planner_py/: package.xml  setup.cfg  setup.py
blue_planner_py/blue_planner_py/: plan_node.py  publish_to_ismc_ref_node.py  subscribe_to_odom_node.py
blue_utils/: CMakeLists.txt  package.xml
blue_utils/scripts/: bag.sh  disarm.sh  send_cmd.sh  send_pwm.sh  start_keyboard_teleop.sh  start_topside_controller_forwarding.sh  start_vehicle_controller_listening.sh
docs/: intro.md  (+4 more)
(+167 files in other folders)
