<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blue_bridge</name>
  <version>0.0.0</version>
  <description>mavros interface between the BlueROV2 hardware and the driver.</description>
  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_extras</exec_depend>
  <depend>mavros_msgs</depend>
  <depend>geographic_msgs</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
