<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>blue_bringup</name>
  <version>1.0.0</version>
  <description>Launch files for Blue</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/Robotic-Decision-Making-Lab/blue.git</url>
  <url type="bugtracker">https://github.com/Robotic-Decision-Making-Lab/blue/issues</url>

  <author>Evan Palmer</author>

  <exec_depend>blue_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
