<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>blue_manager</name>
  <version>0.0.1</version>
  <description>An interface for enabling individual thruster control on the BlueROV2.</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/evan-palmer/blue.git</url>
  <url type="bugtracker">https://github.com/evan-palmer/blue/issues</url>

  <author>Evan Palmer</author>

  <depend>mavros_msgs</depend>
  <depend>std_srvs</depend>
  <depend>joy-linux</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
