<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blue_planner_cpp</name>
  <version>0.0.0</version>
  <description>OMPL integration with blueROV</description>
  <maintainer email="agrawaak@oregonstate.edu">blue</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>

  <!-- dependencies for ompl -->
  <depend>ompl</depend>

  <!-- Dependencies for pinocchio -->
  <depend>ament_index_cpp</depend>
  <depend>eigen</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>pinocchio</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
